# databao-cli

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  index.html  opencode.json  pyproject.toml  summary.json
.github/: copilot-instructions.md
100/: index.html
101/: index.html
102/: index.html
103/: index.html
104/: index.html
105/: index.html
107/: index.html
108/: index.html
109/: index.html
110/: index.html
111/: index.html
112/: index.html
113/: index.html
114/: index.html
115/: index.html
116/: index.html
117/: index.html
118/: index.html
119/: index.html
120/: index.html
121/: index.html
122/: index.html
123/: index.html
124/: index.html
125/: index.html
126/: index.html
127/: index.html
129/: index.html
130/: index.html
131/: index.html
132/: index.html
133/: index.html
134/: index.html
135/: index.html
136/: index.html
137/: index.html
138/: index.html
139/: index.html
140/: index.html
141/: index.html
142/: index.html
143/: index.html
144/: index.html
145/: index.html
146/: index.html
147/: index.html
148/: index.html
149/: index.html
150/: index.html
151/: index.html
152/: index.html
153/: index.html
154/: index.html
155/: index.html
156/: index.html
157/: index.html
158/: index.html
159/: index.html
160/: index.html
161/: index.html
162/: index.html
163/: index.html
164/: index.html
165/: index.html
166/: index.html
167/: index.html
168/: index.html
169/: index.html
170/: index.html
171/: index.html
172/: index.html
173/: index.html
174/: index.html
175/: index.html
176/: index.html
177/: index.html
178/: index.html
179/: index.html
180/: index.html
181/: index.html
182/: index.html
183/: index.html
184/: index.html
185/: index.html
186/: index.html
187/: index.html
188/: index.html
189/: index.html
190/: index.html
191/: index.html
192/: index.html
193/: index.html
194/: index.html
195/: index.html
196/: index.html
197/: index.html
198/: index.html
199/: index.html
200/: index.html
201/: index.html
202/: index.html
203/: index.html
204/: index.html
205/: index.html
206/: index.html
207/: index.html
208/: index.html
209/: index.html
210/: index.html
211/: index.html
212/: index.html
213/: index.html
214/: index.html
217/: index.html
218/: index.html
220/: index.html
221/: index.html
222/: index.html
223/: index.html
224/: index.html
225/: index.html
226/: index.html
227/: index.html
228/: index.html
229/: index.html
230/: index.html
231/: index.html
232/: index.html
233/: index.html
234/: index.html
235/: index.html
236/: index.html
237/: index.html
238/: index.html
239/: index.html
240/: index.html
241/: index.html
242/: index.html
243/: index.html
244/: index.html
245/: index.html
246/: index.html
247/: index.html
248/: index.html
249/: index.html
250/: index.html
251/: index.html
252/: index.html
253/: index.html
254/: index.html
255/: index.html
256/: index.html
257/: index.html
258/: index.html
259/: index.html
260/: index.html
261/: index.html
262/: index.html
263/: index.html
264/: index.html
265/: index.html
267/: index.html
268/: index.html
269/: index.html
270/: index.html
271/: index.html
272/: index.html
273/: index.html
274/: index.html
275/: index.html
276/: index.html
277/: index.html
278/: index.html
279/: index.html
280/: index.html
281/: index.html
282/: index.html
283/: index.html
284/: index.html
285/: index.html
286/: index.html
287/: index.html
288/: index.html
289/: index.html
290/: index.html
291/: index.html
292/: index.html
293/: index.html
294/: index.html
295/: index.html
296/: index.html
297/: index.html
298/: index.html
299/: index.html
300/: index.html
301/: index.html
302/: index.html
303/: index.html
304/: index.html
305/: index.html
306/: index.html
307/: index.html
308/: index.html
309/: index.html
310/: index.html
311/: index.html
312/: index.html
314/: index.html
315/: index.html
e2e-tests/: .gitignore  pyproject.toml  pytest.ini
e2e-tests/src/: database_utils.py  project_utils.py
e2e-tests/src/databases/: bigquery_utils.py  database_utils.py  duckdb_utils.py  mysql_utils.py  postgres_utils.py  snowflake_utils.py  sqlite_utils.py
e2e-tests/src/utils/: path_utils.py  pexpect_utils.py  yaml_compare.py
e2e-tests/tests/: conftest.py
e2e-tests/tests/domains/: test_bigquery.py  test_duckdb.py  test_mysql.py  test_postgres.py  test_snowflake.py  test_sqlite.py
e2e-tests/tests/resources/: bigquery_introspections.yaml  duckdb_introspections.yaml  mysql_introspections.yaml  postgres_introspections.yaml  postgres_partitioned_tables_introspections.yaml  snowflake_introspections.yaml  sqlite_introspections.yaml
examples/demo-snowflake-project/: README.md  cleanup.sql  pyproject.toml  setup.sql
examples/demo-snowflake-project/databao/domains/root/: dce.ini
examples/demo-snowflake-project/databao/domains/root/src/: snowflake.yaml
examples/demo-snowflake-project/src/databao_snowflake_demo/: app.py  requirements.txt
examples/snowflake-connection-test/: pyproject.toml
examples/snowflake-connection-test/src/databao_snowflake_connection_test/: app.py
mock-cli/: pyproject.toml  test_questions.csv
mock-cli/databao_mock/: __main__.py  header.py
mock-cli/databao_mock/commands/: app.py  claude.py  deploy.py  init.py  login.py  sync.py
mock-cli/test-shopify/: .user.yml  dbt_project.yml  profiles.yml  seed_db.py  shopify.duckdb
mock-cli/test-shopify/.databao/: databao.yml  test_questions.csv
mock-cli/test-shopify/models/metrics/: orders_metrics.yml
mock-cli/test-shopify/models/semantic_models/: orders.yml
mock-cli/test-shopify/models/staging/: _sources.yml  metricflow_time_spine.sql  stg_orders.sql
(+13166 files in other folders)
