[project]
name = "databao-cli"
version = "0.1.0.dev2"
description = ""
authors = [
    {name = "Maryia Lapatsina", email = "maryia.lapatsina@jetbrains.com"},
    {name = "Yury Khudyakov", email = "yury.khudyakov@jetbrains.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1,<9.0.0",
    "databao-context-engine[snowflake]==0.3.0.dev2",
    "prettytable>=3.10.0",
    "databao==0.1.4.dev2",
    "streamlit[snowflake]>=1.53.0",
    "uuid6>=2024.7.10",
    "pyyaml>=6.0",
]

[project.scripts]
databao = "databao_cli.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "jetbrains-databao-dev"
url = "https://packages.jetbrains.team/pypi/p/ai-debugger/pypi-databao-dev/simple"

[tool.hatch.build.targets.wheel]
packages = ["src/databao_cli"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.9.0,<1.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific
    "RUF",
    # Prefer absolute imports over relative ones
    "TID252",
]
ignore = ["S301"]  # pickle usage is needed; suppressed inline at call sites

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is standard in pytest
