[project]
name = "databao-cli"
version = "0.1.0"
description = ""
authors = [
    { name = "Maryia Lapatsina", email = "maryia.lapatsina@jetbrains.com" },
    { name = "Yury Khudyakov", email = "yury.khudyakov@jetbrains.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1,<9.0.0",
    "databao-context-engine[snowflake]~=0.4.0",
    "prettytable>=3.10.0",
    "databao~=0.2.0b3",
    "streamlit[snowflake]>=1.53.0",
    "uuid6>=2024.7.10",
    "pyyaml>=6.0",
    "adbc-driver-snowflake>=1.10.0",
    "adbc-driver-manager>=1.10.0",
]

[project.optional-dependencies]
mssql = [
    "databao-context-engine[mssql]"
]
clickhouse = [
    "databao-context-engine[clickhouse]"
]
athena = [
    "databao-context-engine[athena]"
]
bigquery = [
    "databao-context-engine[bigquery]",
]
pdf = [
    "databao-context-engine[pdf]"
]

[project.scripts]
databao = "databao_cli.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/databao_cli"]

[tool.uv.workspace]
members = ["examples/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.9.0,<1.0.0",
]

e2e-tests = [
    "pytest>=9.0.2",
    "allure-pytest>=2.15.3",
    "pexpect>=4.9.0",
    "pyyaml>=6.0.3",
    "deepdiff>=8.6.1",
    "python-dotenv>=1.2.1",
    "testcontainers>=4.14.1",
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific
    "RUF",
    # Prefer absolute imports over relative ones
    "TID252",
]
ignore = ["S301"]  # pickle usage is needed; suppressed inline at call sites

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is standard in pytest

[tool.pytest.ini_options]
testpaths = ["tests"]
