[project]
name = "databao"
dynamic = ["version"]  # Based on the git tag
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1,<9.0.0",
    "databao-context-engine[snowflake]~=0.6.0",
    "prettytable>=3.10.0",
    "databao-agent~=0.2.0",
    "questionary>=2.1.1",
    "streamlit[snowflake]>=1.53.0",
    "uuid6>=2024.7.10",
    "pyyaml>=6.0",
    "fastmcp>=2.0.0",
    "adbc-driver-snowflake>=1.10.0",
    "adbc-driver-manager>=1.10.0",
    "nh3>=0.2.15",
]

[project.optional-dependencies]
mssql = [
    "databao-context-engine[mssql]"
]
clickhouse = [
    "databao-context-engine[clickhouse]"
]
athena = [
    "databao-context-engine[athena]"
]
bigquery = [
    "databao-context-engine[bigquery]",
]
pdf = [
    "databao-context-engine[pdf]"
]

[project.scripts]
databao = "databao_cli.__main__:cli"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
# Use `git tag -a v0.0.0 -m "v0.0.0"` to create a tag.
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
bump = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/databao_cli"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.9.0,<1.0.0",
    "mypy>=1.18.2",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "pytest-cov>=6.0,<7.0",
]

e2e-tests = [
    "pytest>=9.0.2",
    "allure-pytest>=2.15.3",
    "pexpect>=4.9.0",
    "pyyaml>=6.0.3",
    "deepdiff>=8.6.1",
    "python-dotenv>=1.2.1",
    "testcontainers>=4.14.1",
]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific
    "RUF",
    # Prefer absolute imports over relative ones
    "TID252",
]
ignore = [
    "RUF001",  # Allow ambiguous unicode characters (emojis in UI)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is standard in pytest

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_redefinition_new = true
local_partial_types = true
files = ["src/databao_cli", "tests", "examples"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]


[[tool.mypy.overrides]]
module = ["databao_context_engine", "databao_context_engine.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["databao.agent.integrations.dce.*"]
disable_error_code = ["no-any-return"]

[tool.coverage.run]
source = ["src/databao_cli"]
omit = [
    "src/databao_cli/ui/*",
    "src/databao_cli/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
