[project]
name = "databao-demo-snowflake-project"
version = "0.1.0"
description = "Databao demo project for Snowflake"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "databao>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databao_snowflake_demo"]
