[project]
name = "databao-demo-snowflake-project"
version = "0.1.0"
description = "Databao demo project for Snowflake"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "databao==0.3.4.dev1",
    "databao-agent~=0.2.1",
    "databao-context-engine[snowflake]~=0.7.2",
    "streamlit[snowflake]>=1.53.0",
    "adbc-driver-snowflake>=1.10.0",
    "adbc-driver-manager>=1.10.0",
    "snowflake-sqlalchemy>=1.6.0",
    "duckdb>=0.10.0",
]

[tool.uv]
# DuckDB Snowflake community extension hasn't been built for 1.5.0 yet
constraint-dependencies = ["duckdb<1.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databao_snowflake_demo"]
