[project]
name = "databao-snowflake-connection-test"
version = "0.1.0"
description = "Minimal Snowflake connection test for Databao"
requires-python = ">=3.11,<3.12"
dependencies = [
    "databao>=0.3.3",
]

[tool.uv]
constraint-dependencies = ["duckdb<1.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databao_snowflake_connection_test"]
